src/test/deca/context/invalid/InvalidCast.deca


{
	float b;

	int a = (boolean) (b);
	
}
